  14 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  mona-1.4.15-r1.ebuild:
  sci-mathematics/mona: use prune_libtool_files instead of hack

  05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  mona-1.4.15-r1.ebuild:
  sci-mathematics/mona: added yacc build time dependency

*mona-1.4.15-r1 (05 Nov 2014)

  05 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/50mona-gentoo.el, +mona-1.4.15-r1.ebuild, -mona-1.4.15.ebuild:
  sci-mathematics/mona: added emacs sitefile

*mona-1.4.15 (04 Nov 2014)

  04 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/mona-remove-inline.patch, +metadata.xml, +mona-1.4.15.ebuild:
  sci-mathematics/mona: new ebuild